--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="label_app_name">Biblioteca de bolso</string>
+    <string name="label_login">Login</string>
+    <string name="label_register">Registrar</string>
 </resources>
