Fix app crashes with no internet connection.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="label_app_name">Biblioteca de bolso</string>
     <string name="label_login">Login</string>
     <string name="label_register">Registrar</string>
+    <string name="label_user_logged">Você está logado</string>
+    <string name="label_you_dont_have_connection">Você não tem conexão com a internet</string>
+    <string name="label_incorrect_credentials">Suas credenciais não são parâmetros válidos</string>
 </resources>
