--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="label_you_dont_have_connection">Você não tem conexão com a internet</string>
     <string name="label_incorrect_credentials">Suas credenciais não são parâmetros válidos</string>
     <string name="label_loading">Carregando...</string>
+    <string name="label_server_not_return_correctly">Erro: não foi possível coletar os dados do servidor</string>
 </resources>
