--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="label_loading">Carregando...</string>
     <string name="label_server_not_return_correctly">Erro: não foi possível coletar os dados do servidor</string>
     <string name="label_logout">Logout</string>
+    <string name="drawer_label_open">open</string>
+    <string name="drawer_label_close">close</string>
 </resources>
