--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,21 @@
     <string name="drawer_label_open">open</string>
     <string name="drawer_label_close">close</string>
     <string name="label_add_book">Add a book</string>
+    <string name="title_activity_add_book">AddBookActivity</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="add_book_options_fragment_label">Add book - Options</string>
+    <string name="add_book_offline_fragment_label">Add Book - Add a own book</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="label_search_online">Find your book on google books</string>
+    <string name="label_add_your_own_book">Add your custom book</string>
+    <string name="label_would_like_add">How you would like to add?</string>
+    <string name="label_author">author</string>
+    <string name="label_title">title</string>
+    <string name="label_publisher">publisher</string>
+    <string name="label_description">description</string>
+    <string name="error_must_be_beetween_1_128">Must be between 1 and 128</string>
+    <string name="error_must_be_between_0_128">Must be between 0 and 128</string>
+    <string name="error_must_be_between_0_5000">Must be between 0 and 5000</string>
 </resources>
