--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="label_book_image">Book Image</string>
     <string name="label_loading_book_list">Loading book list</string>
     <string name="label_search">Search</string>
+    <string name="label_sorry_we_not_found_a_book_with_filters">Sorry, we not found a single book with theses filters</string>
 </resources>
