Add bottom sheet to add annotation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,6 @@
     <string name="label_loading_book_list">Loading book list</string>
     <string name="label_search">Search</string>
     <string name="label_sorry_we_not_found_a_book_with_filters">Sorry, we not found a single book with theses filters</string>
+    <string name="label_add_an_annotation">Add an annotation</string>
+    <string name="label_create_annotation">create annotation</string>
 </resources>
