--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,6 @@
     <string name="label_about">About</string>
     <string name="label_account_deleted">Account deleted successfully</string>
     <string name="label_options">Options</string>
+    <string name="annotation_placeholder_insert_text_here">Insert text here...</string>
+    <string name="label_save_annotation">Save annotation</string>
 </resources>
