--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -71,4 +71,7 @@
     <string name="label_about">Sobre</string>
     <string name="label_account_deleted">Conta deletada com sucesso!</string>
     <string name="label_options">Opções</string>
+    <string name="annotation_placeholder_insert_text_here">Insira o texto aqui...</string>
+    <string name="label_save_annotation">Salvar anotação</string>
+    <string name="alert_token_expired">Token expirado, por favor logue de novo</string>
 </resources>
