--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="label_options">Options</string>
     <string name="annotation_placeholder_insert_text_here">Insert text here...</string>
     <string name="label_save_annotation">Save annotation</string>
+    <string name="alert_token_expired">Token expired, please log in again</string>
 </resources>
