--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="label_book_not_found">Book not found</string>
     <string name="label_book_details">Book details</string>
     <string name="label_show_more">Show more</string>
+    <string name="error_invalid_token">Invalid Token! Please log in again</string>
 
     <string-array name="spinner_book_reading_status_value">
         <item>Planning</item>
