--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,6 +95,7 @@
     <string name="label_action_not_valid">Action type not valid</string>
     <string name="label_annotation_id_not_valid">Annotation ID invalid</string>
     <string name="label_book_id_not_valid">Book ID invalid</string>
+    <string name="label_book_updated_sucessfully">Book updated successfully</string>
 
     <string-array name="spinner_book_reading_status_value">
         <item>Planning</item>
