--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,6 +98,9 @@
     <string name="label_book_updated_sucessfully">Book updated successfully</string>
     <string name="label_update">Update</string>
     <string name="label_book_status_updated">Book status updated</string>
+    <string name="label_image_compressed">Image compressed</string>
+    <string name="label_compressing_image">Compressing image</string>
+    <string name="label_updated_successfully">Updated successfully</string>
 
     <string-array name="spinner_book_reading_status_value">
         <item>Planning</item>
