Add show more image listener and update pt-br translation

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -74,4 +74,39 @@
     <string name="annotation_placeholder_insert_text_here">Insira o texto aqui...</string>
     <string name="label_save_annotation">Salvar anotação</string>
     <string name="alert_token_expired">Token expirado, por favor logue de novo</string>
+    <string name="label_edit_book">Editar livro</string>
+    <string name="label_book_not_found">Livro não encontrado</string>
+    <string name="label_book_details">Detalhes do livro</string>
+    <string name="label_show_more">Mostrar mais</string>
+    <string name="error_invalid_token">Token invalido! Faça seu login novamente</string>
+    <string name="label_loading_three_dots">Carregando...</string>
+    <string name="label_Description">Descrição</string>
+    <string name="label_annotations">Anotações</string>
+    <string name="label_abstracts">Resumos</string>
+    <string name="label_add_annotation_or_abstract">Adicionar uma anotação ou um resumo</string>
+    <string name="label_no_internet_connection">Sem internet</string>
+    <string name="label_show_less">Mostrar menos</string>
+    <string name="label_are_you_sure">Tem certeza?</string>
+    <string name="label_are_you_sure_delete_book">Tem certeza que deseja deletar esse livro?</string>
+    <string name="label_cancel">Cancelar</string>
+    <string name="label_delete">Deletar</string>
+    <string name="label_book_removed">Livro removido com sucesso!</string>
+    <string name="label_annotation_saved_successfully">Anotação salva com sucesso!</string>
+    <string name="label_action_not_valid">Ação invalida</string>
+    <string name="label_annotation_id_not_valid">ID de anotação inválido</string>
+    <string name="label_book_id_not_valid">"ID do livro inválido "</string>
+    <string name="label_book_updated_sucessfully">Livro atualizado com sucesso!</string>
+    <string name="label_update">Atualizar</string>
+    <string name="label_book_status_updated">Status do livro atualizado!</string>
+    <string name="label_image_compressed">Imagem comprimida</string>
+    <string name="label_compressing_image">Comprimindo imagem</string>
+    <string name="label_updated_successfully">Atualizado com sucesso!</string>
+    <string name="label_theres_not_an_image_to_update">Não há uma imagem para atualizar</string>
+    <string name="label_book_created">Livro criado!</string>
+    <string name="label_book_list_empty">Não há livros aqui</string>
+    <string name="label_reading">Lendo</string>
+    <string name="label_planning_to_read">Planejo ler</string>
+    <string name="label_concluded">Concluído</string>
+    <string name="label_dropped">Parei de ler</string>
+    <string name="label_invalid_read_status">Status de leitura inválido</string>
 </resources>
