Fix SearchListContent.kt on BookListActivity.kt, fix layout problems on BookInfoActivity.kt, fix EditBookActivity.kt when a book doesn't have an thumbnail(image)

--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -110,4 +110,6 @@
     <string name="label_dropped">Parei de ler</string>
     <string name="label_invalid_read_status">Status de leitura inválido</string>
     <string name="label_book">Livros:</string>
+    <string name="label_reached_in_the_end">Você chegou no fim</string>
+
 </resources>
