add connection to edit borrow endpoint and delete borrow endpoint

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,6 +87,7 @@
     <string name="label_show_less">show less</string>
     <string name="label_are_you_sure">Are you sure?</string>
     <string name="label_are_you_sure_delete_book">Are you sure you want to delete this book?</string>
+    <string name="label_are_you_sure_delete_borrow">Are you sure you want to delete this borrow?</string>
     <string name="label_cancel">Cancel</string>
     <string name="label_delete">delete</string>
     <string name="label_book_removed">Book removed successfully</string>
@@ -137,11 +138,17 @@
     <string name="label_who_did_you_loan_it_to">Who did you loan it to?</string>
     <string name="label_select_book">Select book</string>
     <string name="label_profile">Profile</string>
+    <string name="label_edit">Edit</string>
 
     <string-array name="spinner_book_reading_status_value">
         <item>Planning</item>
         <item>Reading</item>
         <item>Concluded</item>
         <item>Dropped</item>
+    </string-array>
+
+    <string-array name="spinner_book_borrow_status_value">
+        <item>Pending</item>
+        <item>Returned</item>
     </string-array>
 </resources>
