--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,6 +140,8 @@
     <string name="label_profile">Profile</string>
     <string name="label_edit">Edit</string>
     <string name="label_borrow_status">Borrow status:</string>
+    <string name="label_permission_granted_restart_app">Permission granted, restart your app to apply your changes</string>
+    <string name="label_permission_not_granted">Permission not granted!</string>
 
     <string-array name="spinner_book_reading_status_value">
         <item>Planning</item>
