--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,6 +158,7 @@
     <string name="label256character" translatable="false">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>
     <string name="book_already_borrowed_select_other">Book already borrowed. Select other book</string>
     <string name="label_empty">Empty</string>
+    <string name="empty_string" translatable="false"> </string>
     <string name="label_no_internet_connecton">No internet connection</string>
     <string name="label_forgot_password">Forgot Password</string>
     <string name="label_request_to_change_your_password_via_email">Request to change your password via email:</string>
@@ -165,4 +166,9 @@
     <string name="label_check_email_to_change_password">Check your email to change your password</string>
     <string name="label_change_password">Change password</string>
     <string name="label_password_changed">Password changed!!</string>
+
+
+    <string name="error_email_not_valid">Email not valid</string>
+    <string name="error_password_length_between_8_and_32">Password must have length between 8 and 32</string>
+    <string name="error_password_and_confirm_password_not_equals">\'Password\' field must be equals to \'confirm password\' field</string>
 </resources>
